--- a/sources/sections/05-conventions.adoc
+++ b/sources/sections/05-conventions.adoc
@@ -35,8 +35,8 @@ considered the official statement of the normative requirement or recommendation
 In this document, all requirements are associated with tests specified in the abstract test suite
 in <<annex-A>>. The reference to the requirement in the test case is done by a
 requirements label (in the form "*#Req &#x23;#*", where "&#x23;" is a number) associated to
-the "*#bold font#*" *#home#* of the statement described above. Recommendations are
-not tested although they still use a *#bold font#*.
+the *#home#* of the statement described above. Recommendations are
+not tested although they still are documented using a standard template and have unique identifiers.
 
 Requirements classes are separated into their own clauses and named, and specified
 according to inheritance (direct dependencies). The Conformance test classes in the
